--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,7 @@ the owner at <strong>owner@projectname.dev.java.net</strong> (replace "projectna
 <h3>Participation:</h3>
 <p>This is an open source project which may provide an opportunity for developers 
 to participate in a variety of ways.  If you are interested in participating please 
-send an inquiry to the owner at owner@projectname.dev.java.net (replace "projectname" 
-with the name of this project)</p>
+send an inquiry to the owner at owner@configureme.dev.java.net</p>
 <p>If you are a member, you can see the current list of members <a href="servlets/ProjectMemberList">here</a></p>
 <p>If you are not a member, you can request membership to this project <a href="servlets/ProjectMembershipRequest">here</a>.</p>
 <h3>Mailing Lists:</h3>
