--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,8 @@
 <h3>Project Description:</h3>  
 <p>This is a new project on Java.net, we haven't had a chance 
 to put in a full description, if you are interested in knowing more please contact 
-the owner at <strong>owner@projectname.dev.java.net</strong> (replace "projectname" with the name of this project).</p>
+the owner at <strong>owner@configureme.dev.java.net</strong> </p>
+<p>Check out the <a href="http://wiki.java.net/bin/view/Projects/ConfigureMe">Project WiKi</a></p>
 <h3>Participation:</h3>
 <p>This is an open source project which may provide an opportunity for developers 
 to participate in a variety of ways.  If you are interested in participating please 
