--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,16 @@
-<h1>Project home page </h1>
+<h1>Mission statement</h1>
 
-<a href="#OWNER">For Project Owners</a>
-
-<h3>Project Description:</h3>  
+<h3>Goals: </h3>
+<p>Create a solution for object configuration with following features:
+	<ul>
+		<li>Automatic type safe configuration</li>
+		<li>Support for cascading environments</li>
+		<li>One on one relation between a configuration and a configurable object</li>
+		<li>Low load time, low memory footprint</li>
+		<li>Overview of all configuration options for a given configurable object at a glance</li>
+	</ul>
+</p>
+  
 <p>This is a new project on Java.net, we haven't had a chance 
 to put in a full description, if you are interested in knowing more please contact 
 the owner at <strong>owner@configureme.dev.java.net</strong> </p>
