--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <h3>Goals: </h3>
 <p>Create a solution for object configuration with following features:
 	<ul>
-		<li>Automatic type safe configuration</li>
+		<li>Automatic type safe configuration via <a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Annotations">annotations</a></li>
 		<li>Support for cascading environments</li>
 		<li>One on one relation between a configuration and a configurable object</li>
 		<li>Low load time, low memory footprint</li>
