--- a/www/index.html
+++ b/www/index.html
@@ -1,26 +1,40 @@
 <h1>Mission statement</h1>
-
 <h3>Goals: </h3>
 <p>Create a solution for object configuration with following features:
 	<ul>
 		<li>Automatic type safe configuration via <a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Annotations">annotations</a></li>
 		<li>Support for cascading environments</li>
+		<li>Automatic re-configuration of the configurables upon configuration (file) change</li>
 		<li>One on one relation between a configuration and a configurable object</li>
-		<li>Low load time, low memory footprint</li>
 		<li>Overview of all configuration options for a given configurable object at a glance</li>
-	</ul>
-</p>
-  
-<p>Additional features:
-	<ul>
-		<li>In production site edit of config file possible</li>
-		<li>Automatic reconfiguration upon config file edit</li>
+		<li>Low load time, low memory footprint</li>
 	</ul>
 </p>
 
 <p>If you are interested in knowing more please contact 
 the owner at <strong>owner@configureme.dev.java.net</strong> </p>
-<p>Check out the <a href="http://wiki.java.net/bin/view/Projects/ConfigureMe">Project WiKi</a> for more info</p>
+<h1>Download</h1>
+Download release candidate one (stable, used in production on several sites) here:
+https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243
+
+<h1>Documentation></h1>
+<h2>Written Documentation</h2>
+<ul>
+<li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/GettingStarted">Getting Started Guide</a> <bold><-- Start here!</bold></li>
+<li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Home">ConfigureMe documentation home</a></li>
+<li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Annotations">Annotations</a></li>
+<li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Environments">Environments</a></li>
+</ul>
+<h2>Coding examples in SVN</h2>
+All examples are located in src/examples in <a href="https://configureme.dev.java.net/source/browse/configureme/trunk/src/examples/">Subversion</a>.
+Examples demonstrate:
+<ul>
+<li>Pricing: getting started, basic configuration, basic principles</li>
+<li>Helloworld: configuration in locale-like environments, cascading</li>
+<li>Speedlimit: cascading </li>
+<li>LifeCycle: lifecycle <a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Annotations">annotations</a>, before/after configuration, re-configuration</li>
+</ul>
+
 <h3>Participation:</h3>
 <p>This is an open source project which may provide an opportunity for developers 
 to participate in a variety of ways.  If you are interested in participating please 
@@ -30,7 +44,11 @@ send an inquiry to the owner at owner@configureme.dev.java.net</p>
 <h3>Mailing Lists:</h3>
 <p>If you wish to subscribe to one of this project's mailing lists, click <a href="servlets/ProjectMailingListList">here</a></p>
 <h3>Downloads:</h3>
-<p>No download artifacts yet</p>
+<p>
+	Releases:
+	<a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">Release Candidate 1</a>
+</p>
+<p> Nightly builds are available, the download location will follow shortly.</p>
 <h3>Issues:</h3>
 <p>To submit a project issue, or query existing issues, click <a href="servlets/ProjectIssues">here</a></p>
 <br>
