--- a/www/index.html
+++ b/www/index.html
@@ -14,13 +14,12 @@
 <p>If you are interested in knowing more please contact 
 the owner at <strong>owner@configureme.dev.java.net</strong> </p>
 <h1>Download</h1>
-Download release candidate one (stable, used in production on several sites) here:
-https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243
+Download <a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">release candidate one</a> (stable, used in production on several sites) here:
 
 <h1>Documentation></h1>
 <h2>Written Documentation</h2>
 <ul>
-<li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/GettingStarted">Getting Started Guide</a> <bold><-- Start here!</bold></li>
+<li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/GettingStarted">Getting Started Guide</a> <b><-- Start here!</b></li>
 <li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Home">ConfigureMe documentation home</a></li>
 <li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Annotations">Annotations</a></li>
 <li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Environments">Environments</a></li>
