--- a/www/index.html
+++ b/www/index.html
@@ -14,9 +14,9 @@
 <p>If you are interested in knowing more please contact 
 the owner at <strong>owner@configureme.dev.java.net</strong> </p>
 <h1>Download</h1>
-Download <a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">release candidate one</a> (stable, used in production on several sites) here:
-
-<h1>Documentation></h1>
+Download <a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">release candidate one</a> (stable, used in production on several sites)
+<br><br>
+<h1>Documentation</h1>
 <h2>Written Documentation</h2>
 <ul>
 <li><a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/GettingStarted">Getting Started Guide</a> <b><-- Start here!</b></li>
@@ -51,3 +51,14 @@ send an inquiry to the owner at owner@configureme.dev.java.net</p>
 <h3>Issues:</h3>
 <p>To submit a project issue, or query existing issues, click <a href="servlets/ProjectIssues">here</a></p>
 <br>
+<!-- Google analytics code -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-2363606-7");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+<!-- /Google analytics code -->
