--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,8 @@ send an inquiry to the owner at owner@configureme.dev.java.net</p>
 <p> Nightly builds are available, the download location will follow shortly.</p>
 <h3>Issues:</h3>
 <p>To submit a project issue, or query existing issues, click <a href="servlets/ProjectIssues">here</a></p>
+<h3>Last but not least:</h3>
+<p>ENJOY! :-)</p>
 <br>
 <!-- Google analytics code -->
 <script type="text/javascript">
