--- a/www/index.html
+++ b/www/index.html
@@ -13,8 +13,12 @@
 
 <p>If you are interested in knowing more please contact 
 the owner at <strong>owner@configureme.dev.java.net</strong> </p>
-<h1>Download</h1>
-Download <a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">release candidate one</a> (stable, used in production on several sites)
+<h1>Downloads</h1>
+<h3>Releases:</h3>
+	<p>
+	<li><a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">release candidate one</a> (stable, used in production on several sites)</li>
+	</p>
+<p> Nightly builds are available, the download location will follow shortly.</p>
 <br><br>
 <h1>Documentation</h1>
 <h2>Written Documentation</h2>
@@ -42,12 +46,6 @@ send an inquiry to the owner at owner@configureme.dev.java.net</p>
 <p>If you are not a member, you can request membership to this project <a href="servlets/ProjectMembershipRequest">here</a>.</p>
 <h3>Mailing Lists:</h3>
 <p>If you wish to subscribe to one of this project's mailing lists, click <a href="servlets/ProjectMailingListList">here</a></p>
-<h3>Downloads:</h3>
-<p>
-	Releases:
-	<a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">Release Candidate 1</a>
-</p>
-<p> Nightly builds are available, the download location will follow shortly.</p>
 <h3>Issues:</h3>
 <p>To submit a project issue, or query existing issues, click <a href="servlets/ProjectIssues">here</a></p>
 <h3>Last but not least:</h3>
