--- a/www/index.html
+++ b/www/index.html
@@ -18,8 +18,9 @@ the owner at <strong>owner@configureme.dev.java.net</strong> </p>
 	<p>
 	<li><a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">release candidate one</a> (stable, used in production on several sites)</li>
 	</p>
+<h3>Nightly builds:</h3>
 <p> Nightly builds are available, the download location will follow shortly.</p>
-<br><br>
+
 <h1>Documentation</h1>
 <h2>Written Documentation</h2>
 <ul>
