--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,8 @@ the owner at <strong>owner@configureme.dev.java.net</strong> </p>
 <h1>Downloads</h1>
 <h3>Releases:</h3>
 	<p>
-	<li><a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">release candidate one</a> (stable, used in production on several sites)</li>
+	<li><a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">Release of Version 1.0 </a> (stable, used in production on several sites)</li>
+	<li><a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11257&expandFolder=11257&folderID=11243">Older versions </a>
 	</p>
 <h3>Nightly builds:</h3>
 <p> Nightly builds are available, the download location will follow shortly.</p>
