--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
-<h1>Mission statement</h1>
-<h3>Goals: </h3>
+<h1 style="font-weight:bold; font-size:1.7em;">Mission statement</h1>
+<h3 style="background-color:#114382;">Goals: </h3>
 <p>Create a solution for object configuration with following features:
 	<ul>
 		<li>Automatic type safe configuration via <a href="http://infra.anotheria.net:9080/confluence/display/CONFIGUREME/Annotations">annotations</a></li>
@@ -13,17 +13,17 @@
 
 <p>If you are interested in knowing more please contact 
 the owner at <strong>owner@configureme.dev.java.net</strong> </p>
-<h1>Downloads</h1>
-<h3>Releases:</h3>
-	<p>
-	<li><a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">Release of Version 1.0 </a> (stable, used in production on several sites)</li>
-	<li><a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11257&expandFolder=11257&folderID=11243">Older versions </a>
-	</p>
-<h3>Nightly builds:</h3>
+<h1 style="font-weight:bold; font-size:1.7em;">Downloads</h1>
+<h3 style="background-color:#114382;">Releases:</h3>
+	<ul>
+		<li><a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11243&expandFolder=11243&folderID=11243">Release of Version 1.0 </a> (stable, used in production on several sites)</li>
+		<li><a href="https://configureme.dev.java.net/servlets/ProjectDocumentList?folderID=11257&expandFolder=11257&folderID=11243">Older versions </a>
+	</ul>
+<h3 style="background-color:#114382;">Nightly builds:</h3>
 <p> Nightly builds are available, the download location will follow shortly.</p>
 
-<h1>Documentation</h1>
-<h2>Written Documentation</h2>
+<h1 style="font-weight:bold; font-size:1.7em;">Documentation</h1>
+<h2 style="background-color:#114382;">Written Documentation</h2>
 <ul>
 <li><a href="http://infra.anotheria.net/confluence/display/CONFIGUREME/GettingStarted">Getting Started Guide</a> <b><-- Start here!</b></li>
 <li><a href="http://infra.anotheria.net/confluence/display/CONFIGUREME/Home">ConfigureMe documentation home</a></li>
@@ -31,7 +31,7 @@ the owner at <strong>owner@configureme.dev.java.net</strong> </p>
 <li><a href="http://infra.anotheria.net/confluence/display/CONFIGUREME/Annotations">Annotations</a></li>
 <li><a href="http://infra.anotheria.net/confluence/display/CONFIGUREME/Environments">Environments</a></li>
 </ul>
-<h2>Coding examples in SVN</h2>
+<h2 style="background-color:#114382;">Coding examples in SVN</h2>
 All examples are located in src/examples in <a href="https://configureme.dev.java.net/source/browse/configureme/trunk/src/examples/">Subversion</a>.
 Examples demonstrate:
 <ul>
@@ -40,8 +40,8 @@ Examples demonstrate:
 <li>Speedlimit: cascading </li>
 <li>LifeCycle: lifecycle <a href="http://infra.anotheria.net/confluence/display/CONFIGUREME/Annotations">annotations</a>, before/after configuration, re-configuration</li>
 </ul>
-<h1>Packaging</h1>
-<h3>SourceCode:</h3>
+<h1 style="font-weight:bold; font-size:1.7em;">Packaging</h1>
+<h3 style="background-color:#114382;">SourceCode:</h3>
 <p>The source code is organized into three folders:
 	<ul>
 	<li>src/java - the core code of the project </li>
@@ -52,26 +52,26 @@ Examples demonstrate:
 	<li>.project, .classpath - project files for eclipse</li>
 	</ul>
 </p>
-<h3>Testing:</h3>
+<h3 style="background-color:#114382;">Testing:</h3>
 <p>
 ConfigureMe comes with a jUnit4 TestSuite: <code>org.configureme.ConfigureMeTestSuite</code>. Current test coverage according to Emma is >85%.
 </p>
-<h3>Building:</h3>
+<h3 style="background-color:#114382;">Building:</h3>
 <p>
 To build ConfigureMe from source just <a href="https://configureme.dev.java.net/source/browse/configureme/">check it out</a> and run <code>ant dist</code> from the project root directory.  
 </p>
-<h1>Besides...</h1>
-<h3>Participation:</h3>
+<h1 style="font-weight:bold; font-size:1.7em;">Besides...</h1>
+<h3 style="background-color:#114382;">Participation:</h3>
 <p>This is an open source project which may provide an opportunity for developers 
 to participate in a variety of ways.  If you are interested in participating please 
 send an inquiry to the owner at owner@configureme.dev.java.net</p>
 <p>If you are a member, you can see the current list of members <a href="servlets/ProjectMemberList">here</a></p>
 <p>If you are not a member, you can request membership to this project <a href="servlets/ProjectMembershipRequest">here</a>.</p>
-<h3>Mailing Lists:</h3>
+<h3 style="background-color:#114382;">Mailing Lists:</h3>
 <p>If you wish to subscribe to one of this project's mailing lists, click <a href="servlets/ProjectMailingListList">here</a></p>
-<h3>Issues:</h3>
+<h3 style="background-color:#114382;">Issues:</h3>
 <p>To submit a project issue, or query existing issues, click <a href="servlets/ProjectIssues">here</a></p>
-<h3>Last but not least:</h3>
+<h3 style="background-color:#114382;">Last but not least:</h3>
 <p>ENJOY! :-)</p>
 <br>
 <!-- Google analytics code -->
