remove log4j dependencies and change parent version to 2.2, ano-util to 2.1.0

--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@ Examples demonstrate:
 	<li>src/java - the core code of the project </li>
 	<li>src/examples - examples for the usage and example config files</li>
 	<li>test/junit - set of junit4 test</li>
-	<li>lib - the required libraries: log4j, json parser and ano-util (string utilities)</li>
+	<li>lib - the required libraries: slf4j, json parser and ano-util (string utilities)</li>
 	<li>build.xml - the ant build file</li>
 	<li>.project, .classpath - project files for eclipse</li>
 	</ul>
